# task_manager_api

./: README.md  gitignore.txt  requirements.txt  test_task_manager.db
.github/workflows/: ci.yml  tesg.yml  tests.yml
task_manager_api/: DOCKER_TROUBLESHOOTING.md  Dockerfile  README.md  SETUP_GUIDE.md  docker-compose.yml  env.example  init_db.bat  init_db.sh  pyproject.toml  setup.py
task_manager_api/alembic/: env.py
task_manager_api/alembic/versions/: 1744f303b3eb_initial_migration_users_and_tasks_tables.py
task_manager_api/app/: main.py
task_manager_api/app/api/: deps.py
task_manager_api/app/api/routes/: auth.py  tasks.py
task_manager_api/app/core/: config.py  security.py
task_manager_api/app/db/: models.py  session.py
task_manager_api/app/schemas/: auth.py  task.py
task_manager_api/app/services/: task_service.py
task_manager_api/task_manager_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
task_manager_api/tests/: conftest.py  test_auth.py  test_tasks.py
